[gd_scene load_steps=7 format=3 uid="uid://c3p3b88yp6oqp"]

[ext_resource type="Script" uid="uid://vm87t1esxyif" path="res://scripts/game_saved_notification.gd" id="1_vqbje"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vqbje"]
bg_color = Color(1, 0.282823, 0.565349, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_2dfjt"]
resource_name = "move_in"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -42.545), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wpak0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4f4wr"]
resource_name = "move_out"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -42.545)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ed8j"]
_data = {
&"RESET": SubResource("Animation_wpak0"),
&"move_in": SubResource("Animation_2dfjt"),
&"move_out": SubResource("Animation_4f4wr")
}

[node name="GameSavedNotification" type="PanelContainer"]
anchors_preset = -1
offset_top = -42.545
offset_right = 123.0
offset_bottom = -2.545
theme_override_styles/panel = SubResource("StyleBoxFlat_vqbje")
script = ExtResource("1_vqbje")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Game saved"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0ed8j")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
